# booknlp

./: pyproject.toml
booknlp/common/: torch_compat.py
booknlp/english/: bert_qa.py  entity_tagger.py  litbank_coref.py
